<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="50sp"
        android:gravity="end"
        android:singleLine="true"
        android:ellipsize="start"
        android:textColor="@color/white"
        tools:ignore="InvalidId,MissingConstraints" />




    <Button
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_3"
        app:layout_constraintStart_toEndOf="@+id/key_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_plus"
        app:layout_constraintStart_toEndOf="@+id/key_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/key_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_6"
        app:layout_constraintStart_toEndOf="@+id/key_4"
        app:layout_constraintTop_toBottomOf="@+id/key_2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_minus"
        app:layout_constraintStart_toEndOf="@+id/key_5"
        app:layout_constraintTop_toBottomOf="@+id/key_3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/key_6"
        app:layout_constraintTop_toBottomOf="@+id/key_plus"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_8"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_9"
        app:layout_constraintStart_toEndOf="@+id/key_4"
        app:layout_constraintTop_toBottomOf="@+id/key_5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_multiply"
        app:layout_constraintStart_toEndOf="@+id/key_5"
        app:layout_constraintTop_toBottomOf="@+id/key_6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/key_6"
        app:layout_constraintTop_toBottomOf="@+id/key_minus"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_shere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/key_6"
        app:layout_constraintTop_toBottomOf="@+id/key_multiply"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_equally"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_shere"
        app:layout_constraintStart_toEndOf="@+id/key_5"
        app:layout_constraintTop_toBottomOf="@+id/key_9"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_7"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:backgroundTint="@color/mainBtnColor"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/key_equally"
        app:layout_constraintStart_toEndOf="@+id/key_4"
        app:layout_constraintTop_toBottomOf="@+id/key_8"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_c"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/BtnColor"
        android:text="@string/key_c"
        app:layout_constraintBottom_toTopOf="@+id/key_1"
        app:layout_constraintEnd_toStartOf="@+id/key_back"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/key_back"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/BtnColor"
        android:text="@string/key_back"
        app:layout_constraintBottom_toTopOf="@+id/key_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_c" />

</androidx.constraintlayout.widget.ConstraintLayout>